# Hackathon-Book-1

./: .gitignore  INGESTION_SUMMARY.md  README.md  package-lock.json  package.json  test_sitemap_functionality.sh  tmpclaude-f523-cwd
.specify/memory/: constitution.md
backend/: .env.example  README.md  __init__.py  agent.py  api.py  get_urls_from_sitemap.py  main.py  pyproject.toml  requirements.txt  retrieve.py  retrieve.py.backup  retrieve_backup.py  run_ingestion.py  sitemap_urls.json  test_qdrant_connection.py  test_retrieve.py
backend/models/: agent_models.py
backend/src/: models.py
backend/src/crawler/: docusaurus_crawler.py  url_discovery.py
backend/src/embeddings/: cohere_client.py  embedding_generator.py
backend/src/storage/: qdrant_client.py  vector_storage.py
backend/src/text_processor/: chunker.py  content_extractor.py
backend/src/utils/: config_loader.py  id_generator.py  retry_handler.py
backend/tests/: test_retrieve.py
backend/tools/: retrieval_tool.py  validation_tool.py
book_robotic_minds/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
book_robotic_minds/docs/: intro.md
history/adr/: 001-fastapi-choice.md
specs/001-rag-agent-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-physical-ai/: plan.md  spec.md  tasks.md
specs/002-digital-twin-sim/: plan.md  spec.md  tasks.md
specs/002-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+139 files in other folders)
